# hybrid-legal-retriever

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
data/processed/: bm25_index.pkl
data/processed/chunks/: trafik_kanunu.jsonl
data/trafik_kanunu/: bm25_index.pkl  chunks.jsonl
evaluation/: questions.json
notebooks/: 0_data_extraction.ipynb  1_indexing.ipynb  2_embedding_comparision.ipynb  3_naive_rag.ipynb  4_bm25_test.ipynb  5_hybrid_test.ipynb  6_reranker.ipynb  7_generate_eval_dataset.ipynb  8_evaluation.ipynb  data_extraction.ipynb  embedding_comparision.ipynb  indexing.ipynb  naive_rag.ipynb
src/api/: __init__.py  chat.py  file.py  index.py
src/core/: bm25_retriever.py  chat.py  dense_retriever.py  helper.py  hybrid_retriever  hybrid_retriever.py  index.py
src/evaluation/: generate_questions.py  metrics.py
src/parser/: chat.py  file.py  index.py
src/retrieval/: bm25_retriever.py  hybrid_retriever.py  indexer.py  reranker.py
