[tool.poetry]
name = "hybrid-legal-retriever"
version = "0.1.0"
description = ""
authors = ["aliosmankaya <aokaya16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pdfplumber = "^0.11.9"
ipykernel = "^7.2.0"
sentence-transformers = "^5.4.0"
dotenv = "^0.9.9"
pandas = "^3.0.2"
jupyter-black = "^0.4.0"
qdrant-client = "^1.17.1"
accelerate = "^1.13.0"
rank-bm25 = "^0.2.2"
requests = "^2.34.1"
langchain-openrouter = "^0.2.3"
fastapi = "^0.139.0"
uvicorn = {extras = ["standard"], version = "^0.51.0"}
python-multipart = "^0.0.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
